Initial basic weather app.

--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,12 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #fff;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +23,19 @@
   color: white;
 }
 
+label {
+	margin-right: 0.5em;
+}
+
+.report {
+	margin-top: 1em;
+	font-size: 50px;
+}
+
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.attributions {
+	margin-top: 20em;
 }
