--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -1,41 +1,2 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-  }
-}
-
-.App-header {
-  background-color: #fff;
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-label {
-	margin-right: 0.5em;
-}
-
-.report {
-	margin-top: 1em;
-	font-size: 50px;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.attributions {
-	margin-top: 20em;
+.Settings {
 }
